--- a/assets/css/image_p.css
+++ b/assets/css/image_p.css
@@ -7,12 +7,5 @@ layout: null
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-}
-
-h3 {
-  text-align: center;
-  font-size: 1em;
-  color: #009;
-  margin-bottom: .3em;
-  text-decoration: underline;
+  height: 50%;
 }
