--- a/assets/css/green_BaiJamjuree.css
+++ b/assets/css/green_BaiJamjuree.css
@@ -16,7 +16,7 @@ body {
 p {margin-bottom: 1.15rem;}
 
 /* change font for all headings excluding title to keep it in line with the rest of the site*/
-h2, h3, h4, h5 {
+h1 h2, h3, h4, h5 {
   margin: 2.75rem 0 1.05rem;
   font-family: 'Bai Jamjuree', sans-serif;
   font-weight: 400;
@@ -31,7 +31,7 @@ h1 {
 }
 */
 
-h2 {font-size: 3.157em; color: #0b6623;}
+h2 {font-size: 3.157em;}
 
 h3 {font-size: 2.369em;}
 
