--- a/assets/css/green_BaiJamjuree.css
+++ b/assets/css/green_BaiJamjuree.css
@@ -24,14 +24,13 @@ h1 h2, h3, h4, h5 {
   color: #0b6623; /* Contrast ratio of 7.14. Passes WCAG AA & AAA */
 }
 
-/*
+
 h1 {
   margin-top: 0;
   font-size: 4.209em;
 }
-*/
 
-h2 {font-size: 3.157em;}
+h2 {font-size: 3.157em; color: #0b6623;}
 
 h3 {font-size: 2.369em;}
 
