--- a/assets/css/green_BaiJamjuree.css
+++ b/assets/css/green_BaiJamjuree.css
@@ -30,7 +30,7 @@ h1 {
   font-size: 4.209em;
 }
 
-h2 {font-size: 3.157em; color: #0b6623;}
+h2 {font-size: 3.157em; color: #0b6623; font-family: 'Bai Jamjuree', sans-serif;}
 
 h3 {font-size: 2.369em;}
 
