--- a/assets/css/green_BaiJamjuree.css
+++ b/assets/css/green_BaiJamjuree.css
@@ -1,3 +1,7 @@
+---
+layout: null
+---
+
 @import url('https://fonts.googleapis.com/css?family=Bai+Jamjuree:400|Merriweather:400');
 
 html {font-size: 100%;} /*16px*/
