--- a/assets/css/blue_blockquote.css
+++ b/assets/css/blue_blockquote.css
@@ -1,22 +1,57 @@
 ---
 layout: null
 ---
+@import "compass/css3";
+
+/* Some vars */
+$background-color: hsl(50, 5, 97);
+$black: hsl(200, 40, 10);
+$white: $background-color;
+$base-font-size: 2.4em;
+$base-line-height: 1.5em;
 
 blockquote {
-  background: #f9f9f9;
-  border-left: 10px solid #ccc;
-  margin: 1.5em 10px;
-  padding: 0.5em 10px;
-  quotes: "\201C""\201D""\2018""\2019";
+  position: relative;
+  padding-left: 1em;
+  border-left: 0.2em solid lighten($black, 40%);
+  font-family: 'Roboto', serif;
+  font-size: $base-font-size;
+  line-height: $base-line-height;
+  font-weight: 100;
+  margin-bottom: 3em;
 }
 blockquote:before {
-  color: #ccc;
-  content: open-quote;
-  font-size: 4em;
-  line-height: 0.1em;
-  margin-right: 0.25em;
-  vertical-align: -0.4em;
+	content: '\201C';
+	font-family: 'Sanchez';
+	color: lighten($black, 40%);
+}
+blockquote:after {
+	content: '\201C';
+	font-family: 'Sanchez';
+	color: lighten($black, 40%);
+	content: '\201D';
 }
 blockquote p {
   display: inline;
+}
+
+/* Some generic stuff. Don't worry about it */
+
+@import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,700),
+        url(https://fonts.googleapis.com/css?family=Sanchez:400italic,400),
+        url(https://fonts.googleapis.com/css?family=Roboto:100);
+
+html {
+  background: hsl(50, 5, 97);
+  font-size: 16px;
+}
+
+body {
+  color: hsl(200, 40, 40);
+  font-size: 62.5%;
+}
+
+.container {
+  width: 80em;
+  margin: 2em auto;
 }
