--- a/assets/css/blue_blockquote.css
+++ b/assets/css/blue_blockquote.css
@@ -1,7 +1,9 @@
 ---
 layout: null
 ---
-@import "compass/css3";
+
+@import url(https://fonts.googleapis.com/css?family=Sanchez:400italic,400),
+        url(https://fonts.googleapis.com/css?family=Roboto:100);
 
 /* Some vars */
 $background-color: hsl(50, 5, 97);
@@ -21,29 +23,18 @@ blockquote {
   margin-bottom: 3em;
 }
 blockquote:before {
-	content: '\201C';
+  content: '\201C';
 	font-family: 'Sanchez';
 	color: lighten($black, 40%);
 }
 blockquote:after {
 	content: '\201C';
+	content: '\201D';
 	font-family: 'Sanchez';
 	color: lighten($black, 40%);
-	content: '\201D';
 }
 blockquote p {
   display: inline;
-}
-
-/* Some generic stuff. Don't worry about it */
-
-@import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,700),
-        url(https://fonts.googleapis.com/css?family=Sanchez:400italic,400),
-        url(https://fonts.googleapis.com/css?family=Roboto:100);
-
-html {
-  background: hsl(50, 5, 97);
-  font-size: 16px;
 }
 
 body {
