--- a/assets/css/blue_blockquote.css
+++ b/assets/css/blue_blockquote.css
@@ -11,11 +11,12 @@ $black: hsl(200, 40, 10);
 $white: $background-color;
 $base-font-size: 2.4em;
 $base-line-height: 1.5em;
+$border-color: #035096;
 
 blockquote {
   position: relative;
   padding-left: 1em;
-  border-left: 0.2em solid lighten($black, 40%);
+  border-left: 0.2em solid #035096;
   font-family: 'Roboto', serif;
   font-size: $base-font-size;
   line-height: $base-line-height;
@@ -26,13 +27,13 @@ blockquote {
 blockquote:before {
   content: '\201C';
 	font-family: 'Sanchez';
-	color: lighten($black, 40%);
+	color: $border-color:;
 }
 blockquote:after {
 	content: '\201C';
 	content: '\201D';
 	font-family: 'Sanchez';
-	color: lighten($black, 40%);
+	color: $border-color:;
 }
 blockquote p {
   display: inline;
