--- a/assets/css/simple_blockquote.css
+++ b/assets/css/simple_blockquote.css
@@ -4,7 +4,7 @@ layout: null
 
 blockquote {
   background: #f9f9f9;
-  border-left: 10px solid #ccc;
+  border-left: 10px solid #0892d0;
   margin: 1.5em 10px;
   padding: 0.5em 10px;
   quotes: "\201C""\201D""\2018""\2019";
