--- a/assets/css/blue_blockquote.css
+++ b/assets/css/blue_blockquote.css
@@ -16,7 +16,7 @@ $border-color: #035096;
 blockquote {
   position: relative;
   padding-left: 1em;
-  border-left: 0.2em solid #035096;
+  border-left: 5px solid #035096;
   font-family: 'Roboto', serif;
   font-size: $base-font-size;
   line-height: $base-line-height;
