--- a/assets/css/blue_blockquote.css
+++ b/assets/css/blue_blockquote.css
@@ -6,20 +6,12 @@ layout: null
         url(https://fonts.googleapis.com/css?family=Roboto:100);
 
 /* Some vars */
-$background-color: hsl(50, 5, 97);
-$black: hsl(200, 40, 10);
-$white: $background-color;
-$base-font-size: 2.4em;
-$base-line-height: 1.5em;
-$border-color: #035096;
 
 blockquote {
-  position: relative;
   padding-left: 1em;
   border-left: 5px solid #035096;
   font-family: 'Roboto', serif;
-  font-size: $base-font-size;
-  line-height: $base-line-height;
+  line-height: 1.5em;
   font-weight: 100;
   margin-bottom: 3em;
   font-size: 62.5%;
@@ -28,13 +20,13 @@ blockquote {
 blockquote:before {
   content: '\201C';
 	font-family: 'Sanchez';
-	color: $border-color:;
+	color: #035096;
 }
 blockquote:after {
 	content: '\201C';
 	content: '\201D';
 	font-family: 'Sanchez';
-	color: $border-color:;
+	color: #035096;
 }
 blockquote p {
   display: inline;
