--- a/assets/css/blue_blockquote.css
+++ b/assets/css/blue_blockquote.css
@@ -4,13 +4,15 @@ layout: null
 
 @import url(https://fonts.googleapis.com/css?family=Sanchez:400italic,400),
         url(https://fonts.googleapis.com/css?family=Roboto:100);
-
 /* Some vars */
 
+
 blockquote {
+  position: relative;
   padding-left: 1em;
   border-left: 5px solid #035096;
   font-family: 'Roboto', serif;
+  font-size: 2.4em;
   line-height: 1.5em;
   font-weight: 100;
   margin-bottom: 3em;
@@ -31,10 +33,10 @@ blockquote:after {
 blockquote p {
   display: inline;
 }
-
 /*
 .container {
   width: 80em;
   margin: 2em auto;
 }
 */
+
