--- a/assets/css/blue_blockquote.css
+++ b/assets/css/blue_blockquote.css
@@ -3,13 +3,15 @@ layout: null
 ---
 
 @import url('https://fonts.googleapis.com/css?family=Sanchez:400italic,400'),
+		url('https://fonts.googleapis.com/css?family=Bai+Jamjuree:400|Merriweather:400'),
         url('https://fonts.googleapis.com/css?family=Roboto:100');
 
 blockquote {
   position: relative;
   padding-left: .25em;
   border-left: 5px solid #035096;
-  font-family: 'Roboto', serif;
+  /*font-family: 'Roboto', serif; */
+  font-family: 'Bai Jamjuree', sans-serif;
   font-size: 2.0em;
   line-height: 1.5em;
   font-weight: 100;
