--- a/assets/css/blue_blockquote.css
+++ b/assets/css/blue_blockquote.css
@@ -17,6 +17,7 @@ blockquote {
   font-weight: 100;
   margin-left: .5em;
   margin-bottom: .5em;
+  color: #2D556C;
 }
 blockquote:before {
   content: '\201C';
