--- a/assets/css/blue_blockquote.css
+++ b/assets/css/blue_blockquote.css
@@ -11,7 +11,7 @@ blockquote {
   padding-left: .25em;
   border-left: 5px solid #035096;
   /*font-family: 'Roboto', serif; */
-  font-family: 'Bai Jamjuree', sans-serif;
+  font-family: 'Sanchez';
   font-size: 1.5em;
   line-height: 1.25em;
   font-weight: 100;
