--- a/assets/css/blue_blockquote.css
+++ b/assets/css/blue_blockquote.css
@@ -2,16 +2,13 @@
 layout: null
 ---
 
-@import url('https://fonts.googleapis.com/css?family=Sanchez:400italic,400'),
-		url('https://fonts.googleapis.com/css?family=Bai+Jamjuree:400|Merriweather:400'),
-        url('https://fonts.googleapis.com/css?family=Roboto:100');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400|Sanchez:400');
 
 blockquote {
   position: relative;
   padding-left: .25em;
   border-left: 5px solid #035096;
-  /*font-family: 'Roboto', serif; */
-  font-family: 'Sanchez';
+  font-family: 'Roboto', serif;
   font-size: 1.5em;
   line-height: 1.25em;
   font-weight: 100;
