--- a/assets/css/blue_blockquote.css
+++ b/assets/css/blue_blockquote.css
@@ -8,7 +8,7 @@ blockquote {
   position: relative;
   padding-left: .25em;
   border-left: 5px solid #035096;
-  font-family: 'Roboto', serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 1.5em;
   line-height: 1.25em;
   font-weight: 100;
