--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -17,7 +17,7 @@
 }
 .card-image {
   grid-area: image;
-  background: url("img1.jpg");
+  background: url("/assets/img/getty.jpg");
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   background-size: cover;
