--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -1,7 +1,28 @@
+
+.flex-container {
+  /* We first create a flex layout context */
+  display: flex;
+  
+  /* Then we define the flow direction 
+     and if we allow the items to wrap 
+   * Remember this is the same as:
+   * flex-direction: row;
+   * flex-wrap: wrap;
+   */
+  flex-flow: row wrap;
+  
+  /* Then we define how is distributed the remaining space */
+  justify-content: space-around;
+  
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
 .card {
   display: grid;
   grid-template-columns: 300px;
-  grid-template-rows: 210px 210px 80px;
+  grid-template-rows: 210px 210px 40px;
   grid-template-areas: "image" "text" "stats";
 
   border-radius: 18px;
@@ -17,7 +38,7 @@
 }
 .card-image {
   grid-area: image;
-  background: url("/assets/img/getty.jpg");
+  background:url("/assets/img/getty.jpg");
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   background-size: cover;
@@ -27,10 +48,7 @@
   grid-area: text;
   margin: 25px;
 }
-.card-text .date {
-  color: rgb(255, 7, 110);
-  font-size:13px;
-}
+
 .card-text p {
   color: grey;
   font-size:15px;
@@ -40,40 +58,21 @@
   margin-top:0px;
   font-size:28px;
 }
+
 .card-stats {
   grid-area: stats; 
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
+  display: block;
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
   background: rgb(255, 7, 110);
 }
-.card-stats .stat {
-  padding:10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  color: white;
-}
-.card-stats .border {
-  border-left: 1px solid rgb(172, 26, 87);
-  border-right: 1px solid rgb(172, 26, 87);
-}
-.card-stats .value{
-  font-size:22px;
-  font-weight: 500;
-}
-.card-stats .value sup{
-  font-size:12px;
-}
-.card-stats .type{
-  font-size:11px;
-  font-weight: 300;
-  text-transform: uppercase;
-}
+	
+
 .card:hover {
-  transform: scale(1.15);
+   transform: scale(1.15);
   box-shadow: 5px 5px 15px rgba(0,0,0,0.6);
+}
+
+img {
+  border-radius: 5px 5px 0 0;
 }
