--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -70,7 +70,7 @@
 
 /* ------------------------- CARD 2 ------------------------- */ 
 .card-image.card2 {
-  background: url("http://s.gr-assets.com/assets/icons/goodreads_icon_50x50-823139ec9dc84278d3863007486ae0ac.png");
+  background: url("https://cdn.icon-icons.com/icons2/1125/PNG/512/1486164230-goodreadssquarelight2_79641.png");
   background-size: cover;
 }
 .card-text.card2 .category {
