--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -38,7 +38,7 @@
 }
 .card-image {
   grid-area: image;
-  background:url("/assets/img/JC_Profile_square.jpeg");
+  background:url("https://www.pcgamesn.com/wp-content/uploads/legacy/amd_globalfoundaries_silicon.jpg");
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   background-size: cover;
