--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -38,7 +38,7 @@
 }
 .card-image {
   grid-area: image;
-  background:url("https://www.pcgamesn.com/wp-content/uploads/legacy/amd_globalfoundaries_silicon.jpg");
+  background:url("/assets/img/amd_globalfoundaries_silicon.jpg");
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   background-size: cover;
@@ -70,7 +70,7 @@
 
 /* ------------------------- CARD 2 ------------------------- */ 
 .card-image.card2 {
-  background: url("https://cdn.icon-icons.com/icons2/1125/PNG/512/1486164230-goodreadssquarelight2_79641.png");
+  background: url("/assets/img/goodreads_icon.png");
   background-size: cover;
 }
 .card-text.card2 .category {
