--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -13,6 +13,7 @@
   
   /* Then we define how is distributed the remaining space */
   justify-content: space-around;
+  align-content: space-between;
   
   padding: 0;
   margin: 0;
