--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -1,4 +1,5 @@
 
+@import url('https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps:400|Poppins:400');
 .flex-container {
   /* We first create a flex layout context */
   display: flex;
@@ -88,6 +89,7 @@
 }
 
 
+/* ------------------------- Hyperlinked Text ------------------------- */ 
 /*create special invisible links to make cards link to projects
  *Usage: <a href="URL" class="invisible" target="_blank"> text-goes-here </a>
 
@@ -130,5 +132,14 @@ a:hover {
   text-decoration: none !important;
   color: #006699;
 }
-	
+
+/* ------------------------- Text section above cards ------------------------- */ 
+.section-text{
+  margin: 2.75rem 0 1.05rem;
+  font-family: 'Oleo Script Swash Caps', sans-serif;
+  font-weight: 400;
+  line-height: 1.15;
+  margin-top: 0;
+  font-size: 5.653em;
+}
 
