--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -139,6 +139,7 @@ a:hover {
   font-family: 'Oleo Script Swash Caps', sans-serif;
   font-weight: 400;
   line-height: 1.15;
+  text-align: center;
   margin-top: 0;
   font-size: 5.653em;
 }
