--- a/assets/css/blockquote_no_quote.css
+++ b/assets/css/blockquote_no_quote.css
@@ -1,7 +1,7 @@
 ---
 layout: null
 ---
-
+/*
 blockquote {
   background: #f9f9f9;
   border-left: 10px solid #ccc;
@@ -10,4 +10,78 @@ blockquote {
 }
 blockquote p {
   display: inline;
+}
+*/
+
+@import url(https://fonts.googleapis.com/css?family=Bitter);
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  text-align: center;
+  padding-top: 50px;
+  background: url(https://dl.dropbox.com/s/mz2pjouq8xqw45k/wood_1.png?dl=1);
+}
+
+blockquote {
+  position: relative;
+  display: inline-block;
+  background: #eee;
+  padding: 40px 30px 30px 60px;
+  border-radius: 10px;
+  font-family: 'Bitter', serif;
+  color: #333;
+  text-align: left;
+  
+  box-shadow: 1px 1px 1px #999,
+              2px 2px 1px #999,
+              3px 3px 1px #999;
+  transition-duration: .3s;
+  
+  span.author {
+    position: relative;
+    display: block;
+    text-align: right;
+    margin-top: 5px;
+    color: #999;
+    
+    i {
+      position: relative;
+      background: #eee;
+      padding-left: 5px;
+      font-style: italic;
+      z-index: 5;
+    }
+    
+    &::before {
+      display: block;
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      background: #ccc;
+      z-index: 1;
+    }
+  }
+  
+  &:hover {
+    box-shadow: 1px 1px 5px #999,
+                2px 2px 6px #999,
+                3px 3px 7px #999;
+  }
+  
+  &::before {
+    display: block;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    content: "\"";
+    font-family: 'Bitter', serif;
+    font-size: 120px;
+    color: #999
+  }
 }
