--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -22,6 +22,7 @@ common-js:
 <!DOCTYPE html>
 <html lang="{{ page.language | default: site.language | default: 'en' }}">
   <!-- Beautiful Jekyll | MIT license | Copyright Dean Attali 2020 -->
+  {% seo %}
   {% include head.html %}
 
   <body>
