--- a/_layouts/minimal.html
+++ b/_layouts/minimal.html
@@ -15,7 +15,7 @@ common-ext-js:
 
 <!DOCTYPE html>
 <html lang="{{ page.language | default: site.language | default: 'en' }}">
-
+  {% seo %}
   {% include head.html %}
 
   <body>
