--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -72,7 +72,7 @@
 
 /* ------------------------- CARD 2 ------------------------- */ 
 .card-image.card2 {
-  background: url("/assets/img/home_pg/noun_line_graph");
+  background: url("/assets/img/home_pg/noun_line_graph.png");
   background-size: cover;
 }
 .card-text.card2 .category {
